# cookiecutter-pytemplate

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.package_import_name}}/: .gitattributes  .gitignore  README.md  environment.yml
{{cookiecutter.package_import_name}}/.github/workflows/: docs.yml  pypi.yml  test.yml
{{cookiecutter.package_import_name}}/{{cookiecutter.package_import_name}}/: README.md  pyproject.toml
{{cookiecutter.package_import_name}}/{{cookiecutter.package_import_name}}/docs/: mkdocs.yml
{{cookiecutter.package_import_name}}/{{cookiecutter.package_import_name}}/docs/docs/: index.md
{{cookiecutter.package_import_name}}/{{cookiecutter.package_import_name}}/docs/docs/usage/: library.md
{{cookiecutter.repo_name}}/: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  environment.yml  pyproject.toml
{{cookiecutter.repo_name}}/.github/: release-drafter.yml
{{cookiecutter.repo_name}}/.github/workflows/: docker-build.yml  docker-push.yml  docker.yml  docs.yml  draft.yml  pypi.yml  registry.yml  test-docker.yml  test-multiplatform.yml  test.yml
{{cookiecutter.repo_name}}/notebooks/: example.ipynb
{{cookiecutter.repo_name}}/{{cookiecutter.package_import_name}}/: README.md  pyproject.toml
{{cookiecutter.repo_name}}/{{cookiecutter.package_import_name}}/docs/: mkdocs.yml
{{cookiecutter.repo_name}}/{{cookiecutter.package_import_name}}/docs/docs/: index.md
{{cookiecutter.repo_name}}/{{cookiecutter.package_import_name}}/docs/docs/usage/: cli.md
{{cookiecutter.repo_name}}/{{cookiecutter.package_import_name}}/src/{{cookiecutter.package_import_name}}/: __init__.py  __main__.py
{{cookiecutter.repo_name}}/{{cookiecutter.package_import_name}}/tests/functional/: test_{{cookiecutter.package_import_name}}.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/: LICENSE  README.md  pyproject.toml
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/docs/: mkdocs.yml
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/docs/docs/: index.md
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/docs/docs/usage/: cli.md  library.md
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/src/{{cookiecutter.repo_name}}/: __init__.py  __main__.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/src/{{cookiecutter.repo_name}}/subpackage/: module.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/tests/functional/: test_{{cookiecutter.repo_name}}.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/tests/unit/{{cookiecutter.repo_name}}/subpackage/: test_module.py
