[tool.poetry]
name = "{{cookiecutter.package_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.short_description}}"
readme = 'README.md'
authors = ["{{cookiecutter.author}} <{{cookiecutter.author_email}}>"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
repository = "{{cookiecutter.repo_url}}"
documentation = "{{cookiecutter.docs_url}}"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20"
typer = { version = "^0.3", extras = ["all"] }

# dev
jupyterlab = { version = "^3", optional = true }

# test
pytest = { version = "^6", optional = true }

# docs
mkdocs-material = { version = "^7", optional = true }

[tool.poetry.extras]
# need to do it that way until poetry supports dependency groups: https://github.com/python-poetry/poetry/issues/1644
dev = ["jupyterlab", "pytest", "mkdocs-material"]
test = ["pytest"]
docs = ["mkdocs-material"]

[tool.poetry.scripts]
# cli entry point
{{cookiecutter.package_name}} = "{{cookiecutter.package_import_name}}.__main__:cli"

[build-system]
# this should be there, see https://python-poetry.org/docs/pyproject/#poetry-and-pep-517
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
