[tool.poetry]
name = "{{cookiecutter.package_name}}"
version = "0.1.0"
description = "{{cookiecutter.short_description}}"
readme = "README.md"
authors = ["{{cookiecutter.author}} <{{cookiecutter.author_email}}>"]
classifiers = ["License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"]
repository = "{{cookiecutter.repo_url}}"
documentation = "{{cookiecutter.docs_url}}"

[tool.poetry.dependencies]
python = "^3.9"
{%- if cookiecutter.executable == 'y' %}
typer = { version = "^0.4", extras = ["all"] }
{%- endif %}

# dev
{%- if cookiecutter.jupyter == 'y' %}
jupyterlab = { version = "^3.2", optional = true }
{%- endif %}

# test
pytest = { version = "^7.0", optional = true }

[tool.poetry.extras]
# need to do it that way until poetry supports dependency groups: https://github.com/python-poetry/poetry/issues/1644
dev = [{% if cookiecutter.jupyter == 'y' %}"jupyterlab", {% endif %}"pytest"]
test = ["pytest"]

{%- if cookiecutter.executable == 'y' %}
[tool.poetry.scripts]
# cli entry point
{{cookiecutter.package_name}} = "{{cookiecutter.package_import_name}}.__main__:cli"
{%- endif %}

[build-system]
# this should be there, see https://python-poetry.org/docs/pyproject/#poetry-and-pep-517
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
